fixes alignment of edit card

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ input {
     height: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
-
     padding: 0;
 }
 
@@ -43,18 +42,26 @@ td {
     text-align: center;
 }
 
-#card {
+#card{
     display: flex;
     flex-direction: column;
     padding-top: 10px;
     padding-bottom: 20px;
 }
 
-#card-buttons {
+form {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-#edit-card, #edit-input {
-    width: 100px;
+#edit-input {
+    width: 200px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+button{
+    margin: 5px;
 }
